--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "leo108/php_cas_server_oauth_plugin_center",
+    "name": "saint_seraphim/php_cas_server_oauth_plugin_center",
     "description": "Oauth plugin classes for php_cas_server",
     "type": "library",
     "license": "MIT",
@@ -7,6 +7,10 @@
         {
             "name": "leo108",
             "email": "leo108@qq.com"
+        },
+        {
+            "name": "Saint Seraphim",
+            "email": "juliana@tic.ufrj.br"
         }
     ],
     "homepage": "https://github.com/leo108/php_cas_server_oauth_plugin_center",
